--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Arvo|Barlow+Condensed|Karla|Vollkorn&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/9394b48c69.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="portfolio.css">
+  <link rel="stylesheet" href="home.css">
   <title>Timothy Peng</title>
 </head>
 <body>
