--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
   <script src="https://kit.fontawesome.com/9394b48c69.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="home.css">
+  <script src="home.js"></script>
   <title>Timothy Peng</title>
 </head>
 <body>
@@ -50,7 +51,7 @@
   <section id="external-links">
     <h2>reach me here</h2>
     <div class="contact-links">
-      <a href="https://www.instagram.com/tp3ng/" class="nav-link"><i class="fas fa-camera-retro contact-link"></i> <span class="link-text">Instagram</span></a>
+      <a href="https://www.instagram.com/tp3ng/" class="nav-link" target="_blank"><i class="fas fa-camera-retro contact-link"></i> <span class="link-text">Instagram</span></a>
       <a href="https://github.com/tpeng01" id="profile-link" target="_blank" class="nav-link"><i class="fab fa-github-square contact-link"></i> <span class="link-text">Github</span class="link-text"></a>
       <a href="mailto:tpeng01@gmail.com" class="nav-link"><i class="fas fa-envelope contact-link"></i> <span class="link-text">Gmail</span class="link-text"></a>
       </div>
