--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/9394b48c69.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="home.css">
-  <script src="home.js"></script>
+  <script type ="text/javascript" src="home.js"></script>
   <title>Timothy Peng</title>
 </head>
 <body>
