modify JS, scrolling

--- a/home.html
+++ b/home.html
@@ -8,7 +8,10 @@
   <script src="https://kit.fontawesome.com/9394b48c69.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="home.css">
-  <script type ="text/javascript" src="home.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
   <title>Timothy Peng</title>
 </head>
 <body>
@@ -20,7 +23,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="#welcome-section">About<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="#projects">Projects</a>
-        <a class="nav-item nav-link" href="#">Food</a>
+        <a class="nav-item nav-link" href="#external-links">Contact</a>
       </div>
     </div>
   </nav>
@@ -57,6 +60,6 @@
       </div>
   </section>
   <!--Link to GitHub-->
-  
+  <script type ="text/javascript" src="home.js"></script>
 </body>
 </html>
